# toolbox

./: 404.html  LICENSE  README.md  mkdocs.yml  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: docs.yml
docs/: evaluation.md  index.md  learning.md  optimization.md  sorting.md
docs/machine-learning/: decision-trees.md
docs/optimization/: particle-swarm.md
docs/sorting/: quicksort.md
docs/stylesheets/: extra.css
machine-learning/decision-trees/: index.html
site/: index.html
site/machine-learning/evaluation/: index.html
site/optimization/particle-swarm/: index.html
site/search/: search_index.json
sorting/quicksort/: index.html
src/toolbox/algorithms/: sorting.py
src/toolbox/algorithms/learning/: decisiontree.py  evaluation.py
src/toolbox/algorithms/optimization/: __init__.py  swarm.py
