[metadata]
name = toolbox-inegm
version = 0.0.1
author = Ismail Negm
author_email = ismailnegm@protonmail.com
description = Algorithms, datastructures, and implementations in various domains
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/inegm/toolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.5

[options.packages.find]
where = src
